# edx-platform

./: Dockerfile  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: check-consistent-dependencies.yml  ci-static-analysis.yml  compile-python-requirements.yml  js-tests.yml  lint-imports.yml  migrations-check.yml  pylint-checks.yml  quality-checks.yml  semgrep.yml  static-assets-check.yml  unit-tests.yml
cms/: pytest.ini
cms/djangoapps/cms_user_tasks/: tests.py
cms/djangoapps/contentstore/api/tests/: test_import.py  test_quality.py  test_validation.py
cms/djangoapps/contentstore/rest_api/v1/: mixins.py
cms/djangoapps/contentstore/tests/: test_clone_course.py  test_contentstore.py  test_course_create_rerun.py  test_course_listing.py  test_course_settings.py  test_courseware_index.py  test_crud.py  test_export_git.py  test_i18n.py  test_import.py  test_import_draft_order.py  test_import_pure_xblock.py  test_libraries.py  test_orphan.py  test_outlines.py  test_permissions.py  test_proctoring.py  test_request_event.py  test_signals.py  test_tasks.py  test_transcripts_utils.py  test_users_default_role.py  test_utils.py  test_video_utils.py  tests.py  utils.py
cms/djangoapps/contentstore/views/tests/: test_assets.py  test_block.py  test_certificates.py  test_container_page.py  test_course_index.py  test_course_updates.py  test_credit_eligibility.py  test_discussion_enabled.py  test_entrance_exam.py  test_exam_settings_view.py  test_gating.py  test_group_configurations.py  test_header_menu.py  test_helpers.py  test_import_export.py  test_library.py  test_organizations.py  test_preview.py  test_textbooks.py  test_transcript_settings.py  test_transcripts.py  test_user.py  test_videos.py  utils.py
cms/djangoapps/course_creators/tests/: test_admin.py  test_views.py
cms/djangoapps/maintenance/: tests.py
cms/djangoapps/models/settings/tests/: test_settings.py
cms/envs/: common.py
cms/lib/test/: test_ai_aside_summary_config.py
cms/lib/xblock/tagging/: test.py
cms/lib/xblock/test/: test_runtime.py  test_upstream_sync.py
common/djangoapps/course_modes/tests/: test_views.py
common/djangoapps/student/management/tests/: test_recover_account.py
common/djangoapps/student/models/: user.py
common/djangoapps/student/tests/: test_events.py  test_filters.py  test_linkedin.py  test_models.py  test_tasks.py
common/djangoapps/terrain/stubs/tests/: test_edxnotes.py
common/djangoapps/third_party_auth/tests/: test_identityserver3.py  test_lti.py  test_provider.py  test_utils.py
common/djangoapps/third_party_auth/tests/specs/: test_testshib.py
common/djangoapps/util/tests/: test_file.py
lms/djangoapps/bulk_email/tests/: test_email.py
lms/djangoapps/certificates/tests/: test_events.py  test_filters.py  test_webview_views.py
lms/djangoapps/certificates/views/tests/: test_filters.py
lms/djangoapps/commerce/tests/: __init__.py  test_signals.py
lms/djangoapps/course_api/tests/: test_api.py  test_views.py
lms/djangoapps/course_home_api/outline/tests/: test_view.py
lms/djangoapps/course_wiki/tests/: test_middleware.py
lms/djangoapps/courseware/tests/: test_access.py  test_courses.py  test_filters.py  test_model_data.py  test_sharing_sites.py  test_submitting_problems.py  test_user_state_client.py  test_video_mongo.py  test_views.py
lms/djangoapps/courseware/views/: views.py
lms/djangoapps/discussion/django_comment_client/base/: tests.py
lms/djangoapps/discussion/django_comment_client/tests/: test_utils.py
lms/djangoapps/discussion/rest_api/tests/: test_api.py  test_discussions_notifications.py  test_tasks.py  test_utils.py  test_views.py
lms/djangoapps/grades/tests/: test_api.py  test_events.py  test_models.py  test_tasks.py  test_transformer.py
lms/djangoapps/instructor/tests/: test_api.py  test_filters.py
lms/djangoapps/instructor/tests/views/: test_instructor_dashboard.py
lms/djangoapps/instructor_analytics/tests/: test_csvs.py
lms/djangoapps/instructor_task/tests/: test_integration.py  test_models.py  test_tasks_helper.py
lms/djangoapps/learner_dashboard/tests/: test_programs.py  test_views.py
lms/djangoapps/learner_home/: test_serializers.py  test_views.py  test_waffle.py
lms/djangoapps/mfe_config_api/tests/: test_views.py
lms/djangoapps/mobile_api/tests/: test_course_info_serializers.py  test_course_info_utils.py  test_course_info_views.py  test_model.py
lms/djangoapps/mobile_api/users/: tests.py
lms/djangoapps/support/tests/: test_tasks.py  test_views.py
lms/djangoapps/teams/: models.py
lms/djangoapps/teams/tests/: test_api.py  test_models.py  test_views.py
lms/djangoapps/user_tours/v1/tests/: test_views.py
lms/djangoapps/verify_student/tests/: test_api.py  test_handlers.py  test_models.py  test_views.py
lms/envs/: common.py  minimal.yml  test.py
openedx/: README.md
openedx/core/djangoapps/profile_images/: views.py
openedx/core/lib/: logsettings.py
openedx/core/lib/api/: view_utils.py
openedx/core/lib/tests/: test_edx_api_utils.py
openedx/core/lib/xblock_serializer/: test_api.py
openedx/features/enterprise_support/tests/: test_api.py  test_utils.py
openedx/features/name_affirmation_api/tests/: test_utils.py
openedx/tests/completion_integration/: test_handlers.py  test_services.py
pavelib/: __init__.py  assets.py  quality.py
pavelib/paver_tests/: test_paver_quality.py  test_pii_check.py  test_timer.py
pavelib/utils/test/suites/: __init__.py  js_suite.py  suite.py
requirements/edx/: base.txt  development.txt  doc.txt  github.in  testing.txt
scripts/structures_pruning/tests/: test_splitmongo.py
scripts/user_retirement/tests/utils/: test_jenkins.py
xmodule/: capa_block.py
xmodule/capa/: responsetypes.py
xmodule/capa/tests/: test_responsetypes.py
xmodule/modulestore/tests/: test_assetstore.py  test_mixed_modulestore.py  test_split_modulestore.py  test_xml.py
xmodule/tests/: test_capa_block.py  test_course_block.py  test_library_content.py  test_split_test_block.py  test_tabs.py  test_transcripts_utils.py  test_video.py
xmodule/video_block/: bumper_utils.py
(+100 files in other folders)
